[Backport] 8255959: Timeouts in VectorConversion tests
Summary: [Backport] 8255959: Timeouts in VectorConversion tests

Test Plan: ci jtreg

Reviewed-by: JoshuaZhuwj

Issue: https://github.com/alibaba/dragonwell11/issues/454