@@ -31,9 +31,19 @@ import java.util.function.IntFunction;
 
 /**
  * @test
+ * @requires (os.arch != "ppc64") & (os.arch != "ppc64le")
  * @modules jdk.incubator.vector
  * @modules java.base/jdk.internal.vm.annotation
  * @run testng/othervm  -XX:-TieredCompilation --add-opens jdk.incubator.vector/jdk.incubator.vector=ALL-UNNAMED
+ *      Vector64ConversionTests
+ */
+
+/**
+ * @test VectorConversionHighTimeout
+ * @requires os.arch == "ppc64" | os.arch == "ppc64le"
+ * @modules jdk.incubator.vector
+ * @modules java.base/jdk.internal.vm.annotation
+ * @run testng/othervm/timeout=1800  -XX:-TieredCompilation --add-opens jdk.incubator.vector/jdk.incubator.vector=ALL-UNNAMED
  *      Vector64ConversionTests
  */
 
